--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,8 +16,9 @@ bind C-Space send-prefix
 
 bind v split-window -v -c "#{pane_current_path}"
 bind h split-window -h -c "#{pane_current_path}"
-bind-key -n C-S-Left swap-window -t -1\; select-window -t -1
-bind-key -n C-S-Right swap-window -t +1\; select-window -t +1
+
+bind-key -n S-Left swap-window -t -1\; select-window -t -1
+bind-key -n S-Right swap-window -t +1\; select-window -t +1
 
 set -g @tokyo-night-tmux_show_datetime 0
 set -g @tokyo-night-tmux_show_path 1
@@ -25,10 +26,5 @@ set -g @tokyo-night-tmux_path_format relative # 'relative' or 'full'
 set -g @tokyo-night-tmux_window_id_style none
 set -g @tokyo-night-tmux_pane_id_style super
 set -g @tokyo-night-tmux_zoom_id_style super
-
-#set-option -g default-terminal "xterm-256color"
-#set-option -sa terminal-features ',xterm-256color:RGB'
-#set-option -ga terminal-overrides ",xterm-256color:Tc"
-#set-option -g status-style bg=default
 
 run '~/.tmux/plugins/tpm/tpm
