--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,7 +22,7 @@ bind-key -n S-Right swap-window -t +1\; select-window -t +1
 
 set -g @tokyo-night-tmux_show_datetime 0
 set -g @tokyo-night-tmux_show_path 1
-set -g @tokyo-night-tmux_path_format relative # 'relative' or 'full'
+set -g @tokyo-night-tmux_path_format relative
 set -g @tokyo-night-tmux_window_id_style none
 set -g @tokyo-night-tmux_pane_id_style super
 set -g @tokyo-night-tmux_zoom_id_style super
