--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1775,7 +1775,7 @@ color17 #db4b4b
 #: The full list of actions that can be mapped to key presses is
 #: available here <https://sw.kovidgoyal.net/kitty/actions/>.
 
-# kitty_mod ctrl+shift
+kitty_mod ctrl+shift
 
 #: Special modifier key alias for default shortcuts. You can change
 #: the value of this option to alter all default shortcuts that use
@@ -2177,7 +2177,7 @@ color17 #db4b4b
 
 # map kitty_mod+equal  change_font_size all +2.0
 # map kitty_mod+plus   change_font_size all +2.0
-# map kitty_mod+kp_add change_font_size all +2.0
+map kitty_mod+kp_add change_font_size all +2.0
 # map cmd+plus         change_font_size all +2.0
 # map cmd+equal        change_font_size all +2.0
 # map shift+cmd+equal  change_font_size all +2.0
@@ -2185,7 +2185,7 @@ color17 #db4b4b
 #: Decrease font size
 
 # map kitty_mod+minus       change_font_size all -2.0
-# map kitty_mod+kp_subtract change_font_size all -2.0
+map kitty_mod+kp_subtract change_font_size all -2.0
 # map cmd+minus             change_font_size all -2.0
 # map shift+cmd+minus       change_font_size all -2.0
 
