--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -4,11 +4,11 @@
 
 
 shadow = true;
-shadow-radius = 8;
-shadow-opacity = 0.5
+shadow-radius = 40;
+shadow-opacity = 0.55
 
-shadow-offset-x = -5;
-shadow-offset-y = -5;
+shadow-offset-x = -40;
+shadow-offset-y = -20;
 
 # shadow-red = 0
 # shadow-green = 0
@@ -16,12 +16,12 @@ shadow-offset-y = -5;
 # shadow-color = "#000000"
 
 shadow-exclude = [
-  "name = 'Notification'",
-  "class_g = 'Conky'",
-  "class_g ?= 'Notify-osd'",
-  "class_g = 'Cairo-clock'",
+  "_NET_WM_WINDOW_TYPE:a = '_NET_WM_WINDOW_TYPE_NOTIFICATION'",
+  "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
   "_GTK_FRAME_EXTENTS@:c"
 ];
+
+shadow-ignore-shaped = false
 
 # clip-shadow-above = []
 
