--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,7 +2,6 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin "janoamaral/tokyo-night-tmux"
-set -g @plugin 'omerxx/tmux-sessionx'
 
 set -g mouse on
 set -g base-index 1
@@ -27,6 +26,6 @@ set -g @tokyo-night-tmux_window_id_style none
 set -g @tokyo-night-tmux_pane_id_style super
 set -g @tokyo-night-tmux_zoom_id_style super
 
-set -g @sessionx-bind 's'
+bind-key 's' run-shell "tx --picker"
 
 run '~/.tmux/plugins/tpm/tpm
