--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -51,7 +51,7 @@ inactive-opacity-override = false;
 
 active-opacity = 1.0
 
-inactive-opacity = 0.9;
+# inactive-opacity = 0.9;
 inactive-dim = 0.0
 
 # focus-exclude = []
