--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,11 +13,18 @@ unbind C-b
 set -g prefix C-Space
 bind C-Space send-prefix
 
+set-window-option -g mode-keys vi
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+
 bind v split-window -v -c "#{pane_current_path}"
 bind h split-window -h -c "#{pane_current_path}"
 
-bind-key -n S-Left swap-window -t -1\; select-window -t -1
-bind-key -n S-Right swap-window -t +1\; select-window -t +1
+bind s run-shell "tx --picker"
+bind f run-shell "tx --sessions"
+
+bind -n S-Left swap-window -t -1\; select-window -t -1
+bind -n S-Right swap-window -t +1\; select-window -t +1
 
 set -g @tokyo-night-tmux_show_datetime 0
 set -g @tokyo-night-tmux_show_path 1
@@ -25,7 +32,5 @@ set -g @tokyo-night-tmux_path_format relative
 set -g @tokyo-night-tmux_window_id_style none
 set -g @tokyo-night-tmux_pane_id_style super
 set -g @tokyo-night-tmux_zoom_id_style super
-
-bind-key 's' run-shell "tx --picker"
 
 run '~/.tmux/plugins/tpm/tpm
